2014-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Be ultra-pedantic with CPPFLAGS
	and include paths in order to assure that only required
	directories are supplied, and to avoid accidential collision with
	system header files.

2014-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.h ("C"): New quantum operators
	ThresholdBlackNegateQuantumOp and ThresholdWhiteNegateQuantumOp.
	These correspond to -operator "Threshold-Black-Negate" and
	"Threshold-White-Negate".

2014-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (MultiplyCompositePixels): Multiply
	composition now uses SVG interpretation of how alpha should be
	handled.  No longer does a simple multiply of alpha channel.
	Behavior change.  Patch contributed by Sara Shafaei.

	* coders/msl.c (ProcessMSLScript): Deal with case where
	image_info->attributes is NULL.

2014-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (TranslateTextEx): Support additional format
	specifiers 'g', 'A', 'C', 'D', 'G', 'H', 'M', 'O', 'P', 'Q', 'T',
	'U', 'W', 'X', and '@'.
	(GetMagickGeometry): Support '>' and '<' qualifiers with '@'
	qualifier to specify if image should be resized if larger or
	lesser than given area specification.  Resolves SourceForge bug
	#216 ">" wont take effect when use @ to specify the maximum area.

	* magick/transform.c (GetImageMosaicDimensions): Move mosaic
	dimensions code to a static function for possible future re-use.

2014-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gradient.c (GradientImage): Update image is_grayscale and
	is_monochrome flags based on gradient color properties.

2014-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetMagickGeometry): Deal with resize geometry
	missing width or height (e.g. '640x' or 'x480') by substituting
	the missing value with one which preserves the image aspect ratio.